<?xml version="1.0" encoding="utf-8"?>
<!-- Copyright (C) 2014 SlimRoms Project

     Licensed under the Apache License, Version 2.0 (the "License");
     you may not use this file except in compliance with the License.
     You may obtain a copy of the License at

          http://www.apache.org/licenses/LICENSE-2.0

     Unless required by applicable law or agreed to in writing, software
     distributed under the License is distributed on an "AS IS" BASIS,
     WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
     See the License for the specific language governing permissions and
     limitations under the License.
-->
<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">

    <!-- General strings -->
    <string name="dlg_ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="reset">Reset</string>
    <string name="reset_message">Reset all entries to default?</string>

    <string name="screen_off_gesture_title">Screen off gestures</string>
    <string name="group_applications">Applications</string>
    <string name="select_custom_app_title">Select custom application</string>


    <string name="enable_gestures_title">Enable gestures</string>
    <string name="enable_gestures_summary">Enable screen off gestures</string>
    <string name="gestures_title">Gestures</string>
    <string name="gesture_arrow_down_title">Arrow down</string>
    <string name="gesture_arrow_left_title">Arrow left</string>
    <string name="gesture_arrow_right_title">Arrow right</string>
    <string name="gesture_arrow_up_title">Arrow up</string>
    <string name="gesture_circle_title">Circle</string>
    <string name="gesture_double_swipe_title">Double finger swipe down</string>
    <string name="gesture_double_tap_title">Double tap</string>

     <!-- Notification slider -->
    <string name="notification_slider">Notification slider</string>
    <string name="action">Action</string>

    <string name="top_position">Top position</string>
    <string name="middle_position">Middle position</string>
    <string name="bottom_position">Bottom position</string>
    <string name="total_silence">Total silence</string>
    <string name="alarms_only">Alarms only</string>
    <string name="priority_only">Priority only</string>
    <string name="none">All notifications</string>
    <string name="vibrate">Vibrate</string>
    <string name="ring">Ring</string>

    <string name="button_swap_title">Swap buttons</string>
    <string name="button_swap_summary">Swap the order of recents and back buttons</string>

</resources>
